test: 샘플 데이터 stationId 타입 변경